Actions
Bug #19746
closed`String#index` with regexp and too large offset doesn't clear `$~`
Bug #19746:
`String#index` with regexp and too large offset doesn't clear `$~`
Actions
Added by nobu (Nobuyoshi Nakada) about 3 years ago. Updated about 3 years ago.
Applied in changeset git|0cbfeb8210cd177bee95c512834c483daec36f74.
[Bug #19746] String#index with regexp should clear $~ unless matched
I cannot confident that there's no existing application depends on the current behavior.
I don't backport the changeset.