[Bug #19746] `String#index` with regexp should clear `$~` unless matched